--- a/html/courses.html
+++ b/html/courses.html
@@ -23,7 +23,7 @@
                     <a href="#" class="header_menu_box_link">О нас</a>
                 </div>
 
-                <a href="../html/registration.html" class="reg_btn">Зарегистрироваться</a>
+                <a href="../html/registration.html" class="header_menu_action">Войти</a>
             </div>
         </section>
     </header>
@@ -301,16 +301,15 @@
             </div>
 
             <div class="footer_box footer_info">
-                <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
+                <p class="footer_info_subtitle">По вопросам обращайтесь в техническую поддержку.</p>
                 <p class="footer_info_text">
                     Наш адрес: <br>
                     Школьная улица, 9А, Волоколамск, Московская область
                 </p>
                 <div class="footer_info_box">
-                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
-                            src="../img/Rectangle 3.png" alt="Vk"></a>
+                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
+                    <a href="#" class="footer_info_box_item"></a>
                 </div>
             </div>
         </section>
